Fix DropdownToggle on Firefox

--- a/app/assets/stylesheets/pages/_demoday.scss
+++ b/app/assets/stylesheets/pages/_demoday.scss
@@ -126,6 +126,10 @@
       font-weight: 600;
     }
 
+    a.dropdown-batch:hover {
+      text-decoration: none;
+    }
+
     .dropdown-batch {
       display: flex;
       align-items: center;
